# windrop-server-side

./: .gitignore  Cargo.toml  README.md  client.html  test_websocket.js
src/: main.rs
src/controllers/: file_controller.rs  mod.rs  websocket_controller.rs
src/middleware/: logger.rs  mod.rs  rate_limit.rs
src/models/: device.rs  file.rs  mod.rs  response.rs
src/repositories/: file_repository.rs  mod.rs
src/services/: discovery_service.rs  file_service.rs  mod.rs
src/storage/: file_store.rs  mod.rs
src/tests/integration/: file_transfer_test.rs  rate_limit_test.rs  websocket_test.rs
src/tests/unit/: device_info_test.rs  discovery_service_test.rs
src/websocket/: connection.rs  message.rs  mod.rs
