[package]
name = "windrop"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
actix-service = "2.0"
actix-http = "3.0"
uuid = "1.1"
actix-web-actors = "4.0"
actix-cors = "0.6"   # for CORS if you plan to use with Flutter frontend
