[package]
name = "windrop"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.0"
actix-rt = "2.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
actix-service = "2.0"
actix-http = "3.0"
actix-web-actors = "4.0"
actix-cors = "0.6"
uuid = { version = "1.0", features = ["v4"] }
actix-multipart = "0.6"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
bytes = "1.0"
tempfile = "3.2"
sanitize-filename = "0.4"
mime_guess = "2.0"
tokio-util = { version = "0.6", features = ["io"] } 
num_cpus = "1.13"
utoipa = { version="5.2.0", features = ["actix_extras"]}
utoipa-swagger-ui = {version="8.0.3", features=["actix-web"]}


[dev-dependencies]
actix-rt = "2.8"
tempfile = "3.2"
tokio-test = "0.4"
bytes = "1.0"
